# ComputationalGeometry

./: README.md  docker-compose.yaml  main.cpp  plot.py
compgeo/: Makefile  README.md  compgeo.hpp  main.cpp  plot.py  pyproject.toml
compgeo/algorithms/convex_hull/: convex_hull.hpp  convex_hull_divide_and_conquer.hpp  convex_hull_gift_wrapping.hpp  convex_hull_graham_scan.hpp  convex_hull_incremental.hpp
compgeo/algorithms/triangulation/: triangulation.hpp  triangulation_incremental.hpp  triangulation_splitting.hpp
compgeo/data/: convex_hull_output.txt  triangulation_output.txt
compgeo/geometry/: point.hpp  polygon.hpp  triangle.hpp
lunar_lander/: Dockerfile  README.md  lunar_lander.pth  pyproject.toml  run.py  train.py
lunar_lander/modules/: agent.py  model.py  replay_memory.py  settings.py
lunar_lander/videos/: lunar_lander.webm
