[project]
name = "plot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
  "seaborn",
  "matplotlib",
  "PyQt5"
]

[project.scripts]
plot = "plot:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["geometry", "algorithms","data", "images"]
